# WooduKonquer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.txt  README.md  dockerignore.txt  pyproject.toml  qlearning.py  requirements.txt  setup.py
src/: RLgame.py  game.py  gameRunner.py  search.py  startGame.py  woodoku.py
src/agents/: agent.py  humanAgent.py  monte_carlo_tree_search.py  multi_agents.py  qlearning.py  randomAgent.py  single_agents.py
src/agents/RL_agents/: RLgame.py  deepQlearningAgent.py  featureExtractor.py  mantoCarloAgent.py  mantoCarloControl.py  monteCarlo.py  qlearning.py
src/evaluations/: evaluationFunctions.py  evaluationStateFunctions.py
src/prev_work/: plots.py
src/report/: plots.py
woodokuMind/: RLgame.py  game.py  gameRunner.py  search.py  woodoku.py
woodokuMind/.in_testing/: deepQlearningAgent.py  mantoCarloControl.py  monte_carlo_tree_search.py
woodokuMind/agents/: monte_carlo_tree_search.py  multi_agents.py  single_agents.py
woodokuMind/agents/RL_agents/: featureExtractor.py  qlearning.py
woodokuMind/evaluations/: evaluationFunctions.py  evaluationStateFunctions.py
woodokuMind/report/: plots.py
