
[project]
name = "woodokuMind"
version = "0.1.0"
description = "Search and Reinforcement Learning algorithms for the game of WooduK"
authors =  [
  {name = "Sean Cherny"},
  {name = "Noam Hakim"},
  {name = "Michael Merzin"},
  ]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
  "numpy",
]

[project.scripts]
woodoku-cli = "woodokuMind:woodoku"

#[project.gui-scripts]
#spam-gui = "woodoku:src.woodoku:main"


#[tool.poetry.dependencies]
#python = "^3.10"
#gym-woodoku = {git = "https://github.com/helpingstar/gym-woodoku.git", branch = "main"}
#

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]