
[project]
name = "woodokuMind"
version = "0.1.0"
description = "Search and Reinforcement Learning algorithms for the game of WooduK"
authors =  [
  {name = "Sean Cherny"},
  {name = "Noam Hakim"},
  {name = "Michael Merzin"},
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
  "numpy",
]

[project.scripts]
woodoku-cli = "woodokuMind.woodoku:main"


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]