
[project]
name = "woodokuMind"
version = "0.1.0"
description = "Search and Reinforcement Learning algorithms for the game of WooduK"
authors =  [
  {name = "Sean Cherny"},
  {name = "Noam Hakim"},
  {name = "Michael Merzin"},
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
  "numpy",
  "tqdm",
  "keyboard",
  "python-dotenv",
  "seaborn",
  "matplotlib",
  "neptune",
  "gym-woodoku@git+https://github.com/helpingstar/gym-woodoku.git",
  "cv2",


]

[project.scripts]
woodoku-cli = "woodokuMind.woodoku:main"


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]